<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">HD STREAMZ TV</string>
    
    <!-- Channel Information -->
    <string name="channel_logo">Channel Logo</string>

    <!-- Main navigation tab titles -->
    <string name="tab_events">EVENTS</string>
    <string name="tab_live_tv">LIVE TV</string>
    <string name="tab_live_radio">LIVE RADIO</string>
    <string name="tab_favorite">FAVORITE</string>

    <!-- Content descriptions for accessibility -->
    <string name="content_description_search">Search</string>
    <string name="content_description_notifications">Notifications</string>
    
    <!-- Channel Error -->
    <string name="no_channels_available">No Channel</string>
    
    
    <!-- Placeholder Text -->
    <string name="live_channel_title_placeholder">Live Channel Name</string>
    <string name="player_indicator_placeholder">50%</string>

    <!-- Content Descriptions for Accessibility -->
    <string name="content_description_back">Back</string>
    <string name="content_description_subtitle">Subtitles</string>
    <string name="content_description_more_options">More options</string>
    <string name="content_description_lock_screen">Lock screen controls</string>
    <string name="content_description_play_pause">Play or pause</string>
    <string name="content_description_cast">Cast to device</string>
    <string name="content_description_pip">Picture-in-picture</string>
    <string name="content_description_resize_mode">Change video resize mode</string>
    <string name="content_description_brightness_icon">Brightness icon</string>
    <string name="content_description_volume_icon">Volume icon</string>
    
    <!-- Add these strings for the player layout -->
    <string name="close">Close</string>
    <string name="resize_screen">Resize Screen</string>
    <string name="rewind_10_seconds">Rewind 10 seconds</string>
    <string name="pause">Pause</string>
    <string name="forward_10_seconds">Forward 10 seconds</string>
    <string name="lock_screen">Lock Screen</string>
    <string name="liv_logo">LIV Logo</string>
    <string name="settings">Settings</string>
    <string name="enter_fullscreen">Enter Fullscreen</string>
    <string name="volume">Volume</string>
    
</resources>
